# ssenrah

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN-GUI.md  README.md  package-lock.json  tasks.md
.omc/: prd.json  project-memory.json
.omc/plans/: open-questions.md  p0-auto-team-formation-and-parallel-execution.md  p1-tui-harness-v01.md  team-mode-v1-conversational-decomposition.md  v04a-policy-engine-agent-types.md
.omc/sessions/: 1b8a3a39-51af-4b10-9b13-f073ff06e02f.json  1ef5a116-6326-44a1-8421-b176bb53bed3.json  (+14 more)
.omx/: metrics.json
app/: components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
app/src/: App.css  (+2 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: errors.rs  lib.rs  lockfile.rs  logging.rs  main.rs  types.rs
app/src-tauri/src/commands/: agents.rs  effective.rs  managed.rs  mcp.rs  memory.rs  mod.rs  platform.rs  project.rs  settings.rs  skills.rs  validation.rs  watcher.rs
app/src-tauri/src/io/: atomic.rs  ensure.rs  mod.rs
app/src-tauri/src/platform/: detect.rs  mod.rs  paths.rs
app/src-tauri/src/schema/: merge.rs  mod.rs
app/src-tauri/src/watcher/: debounce.rs  mod.rs  self_write.rs
examples/: README.md  agent-cli.ts  demo-harness.ts  demo-vision-qa.ts  index.ts  package.json
harness/: ARCHITECTURE.md  INSTALL.md  README.md  agent-cli.ts  demo-harness.ts  demo-vision-qa.ts  go.mod  go.sum  index.ts  install.sh  main.go  package-lock.json  package.json  tsconfig.json  uninstall.sh
(+429 files in other folders)
